--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     
   <link rel="stylesheet" href="css/style.css">
   <link rel="stylesheet" href="css/footer.css">
-  <title>Tech-World</title>
+  <title>SSC</title>
  
 </head>
 
